// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Loading /> should render properly 1`] = `
@keyframes animation-0 {
  from {
    -webkit-transform: rotate(0deg);
    -moz-transform: rotate(0deg);
    -ms-transform: rotate(0deg);
    transform: rotate(0deg);
  }

  to {
    -webkit-transform: rotate(360deg);
    -moz-transform: rotate(360deg);
    -ms-transform: rotate(360deg);
    transform: rotate(360deg);
  }
}

.emotion-0 {
  min-height: 300px;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  text-align: center;
  color: #808080;
  background-color: #252525;
  font-size: 15px;
  line-height: 19px;
  box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.5);
  height: 100%;
}

.emotion-1 {
  -webkit-animation: animation-0 2s linear infinite;
  animation: animation-0 2s linear infinite;
  margin-right: 16px;
}

<div
  className="Loading emotion-0"
>
  <svg
    className="emotion-1"
    data-file-name="generating.svg"
    height={20}
  />
  Loading...
</div>
`;

exports[`<Loading /> should render properly when transparent 1`] = `
@keyframes animation-0 {
  from {
    -webkit-transform: rotate(0deg);
    -moz-transform: rotate(0deg);
    -ms-transform: rotate(0deg);
    transform: rotate(0deg);
  }

  to {
    -webkit-transform: rotate(360deg);
    -moz-transform: rotate(360deg);
    -ms-transform: rotate(360deg);
    transform: rotate(360deg);
  }
}

.emotion-0 {
  min-height: 300px;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  text-align: center;
  color: #808080;
  background-color: transparent;
  font-size: 15px;
  line-height: 19px;
  box-shadow: none;
  height: 100%;
}

.emotion-1 {
  -webkit-animation: animation-0 2s linear infinite;
  animation: animation-0 2s linear infinite;
  margin-right: 16px;
}

<div
  className="Loading emotion-0"
>
  <svg
    className="emotion-1"
    data-file-name="generating.svg"
    height={20}
  />
  Loading...
</div>
`;
